--- a/app/src/main/res/drawable/selector_download.xml
+++ b/app/src/main/res/drawable/selector_download.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:state_enabled = "false"
-        android:drawable = "@drawable/ic_back"/>
+        android:drawable = "@drawable/download_normal"/>
     <item
         android:state_pressed = "true"
-        android:drawable = "@drawable/ic_back"/>
-    <item android:drawable = "@drawable/ic_back" />
+        android:drawable = "@drawable/download_pressed"/>
+    <item android:drawable = "@drawable/download_normal" />
 </selector>
