--- a/app/src/main/res/drawable/selector_round_dark_corner_small.xml
+++ b/app/src/main/res/drawable/selector_round_dark_corner_small.xml
@@ -3,5 +3,8 @@
     <item
         android:state_pressed = "true"
         android:drawable = "@drawable/round_dark_corner_small_pressed"/>
+    <item
+        android:state_enabled = "false"
+        android:drawable = "@drawable/round_dark_corner_small_disable"/>
     <item android:drawable = "@drawable/round_dark_corner_small_normal" />
 </selector>
