--- a/app/src/main/res/layout/item_list_file.xml
+++ b/app/src/main/res/layout/item_list_file.xml
@@ -17,14 +17,14 @@
         <import type="android.view.View"/>
         <import type="com.merlin.view.Clicker"/>
         <import type="com.merlin.util.Time"/>
+        <import type="com.merlin.client.R"/>
     </data>
     <RelativeLayout
         binding:enableClick="@{Clicker.multiClick(meta,true)}"
         android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
         android:clickable="true"
-        android:background="@drawable/selector_round_dark_corner_small"
-        android:alpha="@{meta.accessible?1f:0.5f}"
+        android:background="@{meta.accessible?R.drawable.selector_round_dark_corner_small:R.drawable.round_dark_corner_small_disable}"
         android:layout_height="@dimen/listItemNormal">
         <ImageView
             android:id="@+id/itemListFile_icon"
