--- a/app/src/main/res/layout/media_display_play.xml
+++ b/app/src/main/res/layout/media_display_play.xml
@@ -61,6 +61,7 @@
                         android:clickable="true"
                         binding:onChange="@{vm.model.onSeekChange}"
                         android:progress="@{vm.model.currentProgress}"
+                        android:focusableInTouchMode="true"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="3dp"
                         android:layout_marginRight="3dp"
@@ -69,10 +70,9 @@
                         android:focusable="true"
                         android:maxHeight="4.0dip"
                         android:minHeight="4.0dip"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
                         android:paddingLeft="16.0dip"
                         android:paddingRight="16.0dip"
+                        android:thumb="@drawable/selector_thumb"
                         android:progressDrawable="@drawable/seekbar"/>
                 </RelativeLayout>
                 <LinearLayout
